Update GUI implementation records
The implementation plan and active GUI log do not reflect the completed JavaFX configuration and recent runtime decisions. Update both records so the documented classifier set and implementation history match the committed project state.