@@ -121,5 +121,104 @@ The user asked to preserve the completed GUI work before beginning the next
 iteration and to bundle commits by iteration using the SE-EDU Git standard.
 Committed the read-only Dashboard implementation and its documentation as
 `d106b76`, then committed the implementation-plan, active-log, and instruction
-path updates as `6c0fdee`. The full Gradle test suite passes and the worktree
+path updates as `85a8e84`. The full Gradle test suite passes and the worktree
 is clean.
+
+## Prompt 10 — Align the Local JavaFX Runtime
+
+The user asked to try the first configuration-shift iteration after diagnosing
+bold-font rendering artifacts. Installed Azul's verified plain Zulu JDK
+25.0.3 alongside the existing FX build without changing the global SDKMAN
+default. Added `.sdkmanrc` and updated the project standards, memory, and
+developer guide to use the plain JDK so JavaFX 26.0.1 comes exclusively from
+Gradle rather than conflicting JavaFX 25.0.3 system modules. Runtime and test
+verification then exposed that the tutorial's `mac` classifier contains
+x86_64 native libraries; replaced it with `mac-aarch64` for the supported Apple
+Silicon environment. The focused FXML test, full test suite, and Shadow JAR
+build then passed under the plain JDK. The GUI launched through JavaFX 26.0.1
+without the former FXML-version or native-architecture warnings; visual
+confirmation of the bold-font rendering remains with the user.
+
+## Prompt 11 — Restore the Original JavaFX Runtime Configuration
+
+The user confirmed Arial as the GUI font for now and asked which SDK was in
+use, whether the original Gradle and Zulu configuration could be restored, and
+to see the updated build. Restored the FX-bundled `25.0.3.fx-zulu` JDK policy,
+the original JavaFX `mac` dependency classifiers, and removed the repository
+`.sdkmanrc`; retained the Arial stylesheet change. The clean test suite and
+Shadow JAR build passed with all 330 tests. The user accepted the runtime
+warnings produced by this configuration, and the GUI was launched for visual
+inspection.
+
+## Prompt 12 — Add Apple Silicon JavaFX Dependencies
+
+The user asked whether Apple Silicon JavaFX dependencies could coexist with
+the existing Windows, Intel macOS, and Linux dependencies and requested the
+change. Added the `mac-aarch64` classifier for the JavaFX base, controls, FXML,
+and graphics modules while retaining every existing classifier. Updated the
+implementation plan, developer guide, and project memory to describe the
+four-classifier dependency set. The clean test suite and cross-platform Shadow
+JAR build passed with all 330 tests under `25.0.3.fx-zulu`.
+
+## Prompt 13 — Assess JavaFX 25.0.3 Standardisation
+
+The user asked about the effects of changing the Gradle JavaFX dependency
+version from 26.0.1 to 25.0.3 to match the FX-bundled Zulu JDK. Confirmed that
+stable JavaFX 25.0.3 artifacts are available and compatible with JDK 25.
+Explained that alignment should remove the API/runtime mismatch and is low risk
+for the current basic GUI, but the two FXML namespace declarations and project
+documentation must be changed as well; changing only `build.gradle` would
+leave the FXML warning. Also noted the tradeoff of foregoing JavaFX 26 features
+and fixes. No version change was made pending the user's decision.
+
+## Prompt 14 — Standardise on JavaFX 25.0.3
+
+The user approved the JavaFX version change. Updated the shared Gradle version,
+both FXML namespace declarations, and the project guidance and memory to use
+JavaFX 25.0.3 with the existing `25.0.3.fx-zulu` runtime. Historical prompt
+entries retain their original version references for an accurate implementation
+record. Full verification follows.
+
+JavaFX 25.0.3 resolved successfully for all configured classifiers. The full
+`clean test shadowJar` verification passed with all 330 tests under
+`25.0.3.fx-zulu`.
+
+## Prompt 15 — Suppress JavaFX Native-Access Warnings
+
+The user asked how to suppress the Java 25 warning emitted when JavaFX loads
+native libraries. Confirmed that `build.gradle` already supplies
+`--enable-native-access=javafx.graphics` for the Gradle desktop application.
+Explained that VS Code or another direct Java launch must include the same VM
+argument explicitly; the CLI and tests may continue using their separate
+`ALL-UNNAMED` configuration. No project code changes were needed.
+
+## Prompt 16 — Diagnose JAR Native-Access Warnings
+
+The user asked why the JAR still emits native-access warnings after checking
+the VS Code configuration. Inspection found that `.vscode/launch.json` only
+contains a top-level `vmArgs` property, rather than a Java launch
+configuration, so VS Code ignores it; direct `java -jar` and desktop launches
+also do not read that file. The Shadow JAR manifest enables native access for
+`ALL-UNNAMED`, but the warning identifies the named `javafx.graphics` module,
+so the JAR launch command must receive
+`--enable-native-access=javafx.graphics` explicitly. No production changes
+were made.
+
+## Prompt 17 — Configure VS Code Launch Files
+
+The user asked to configure the VS Code files. Replaced the incomplete
+top-level `vmArgs` object in `.vscode/launch.json` with valid Java launch
+configurations for the project GUI and the Shadow JAR, both using
+`--enable-native-access=javafx.graphics`. Added `.vscode/tasks.json` to build
+the Shadow JAR before its launch configuration runs, and aligned the Java test
+configuration in `.vscode/settings.json` with the named JavaFX module.
+
+## Prompt 18 — Diagnose Terminal JAR Warnings
+
+The user reported that the warnings still appear when launching from the
+terminal. Verified that the current Shadow JAR manifest contains only
+`Enable-Native-Access: ALL-UNNAMED`, while the application is loading the
+JavaFX `javafx.graphics` named module from the FX-enabled Zulu runtime. The
+VS Code configuration cannot affect a terminal command. Clarified that the
+module option must be placed before `-jar` in a direct launch command; no
+additional source changes were made.
